[project]
name = "aty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "google-auth>=2.49.2",
    "gspread>=6.2.1",
    "protobuf>=7.34.1",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.scripts]
aty = "main:app"   # nom_commande = fichier:objet_typer

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
